--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -1,13 +1,25 @@
-@import './settings.scss';
 
 header{
+    max-width: 100%;
+    margin: 3%;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    font: {
+        size: 24px;
+    }
 }
 
-$textColor: pink;
-
-li {
-    color: $textColor;
+nav {
+    ul {
+        display: flex;
+        list-style: none;
+    }
+    a {
+        text-decoration: none;
+        color: #FF6060;
+        padding: 5px 20px;
+    }
+    .active{
+        text-decoration: underline;
+    }
 }
