--- a/src/style/About.scss
+++ b/src/style/About.scss
@@ -1,9 +1,19 @@
 .about{
     justify-content: center;
     font-family: 'Montserrat', sans-serif;
-}
+    
+    .infos{
+        margin: 0;
+        width: 1200;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-.infos{
-    text-align: center;
-    margin: 30px 0;
+        .collapse{
+            width: 80%;
+        }
+        button{
+            width: 100%;
+        }
+    }
 }
