--- a/src/style/Banner.scss
+++ b/src/style/Banner.scss
@@ -1,10 +1,15 @@
-.container {
+.banner-container {
   position: relative;
   margin: 3%;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .banner {
-  max-width: 100%;
+  width: 100%;
   height: 223px;
   border-radius: 25px;
   background-color: rgb(60, 60, 60);
