--- a/src/style/Collapse.scss
+++ b/src/style/Collapse.scss
@@ -1,9 +1,5 @@
-
-
 .collapse{
-    padding: 20px;
-    width: 100%;
-
+    margin-bottom: 30px;
     button{
         width: 70%;
         height: 52px;
@@ -14,12 +10,17 @@
         color: white;
         font-size: 24px;
     }
+    ul{        
+        margin: 0;
+        padding: 0;
 
-    li, p{
-        font-size: 18px;
-        width: 70%;
-        margin: 0 auto;
-        text-align: left;
-        color: #FF6060;
+        li, p{
+            font-size: 18px;
+            width: 80%;
+            margin: 10px 10px 0 0;
+            text-align: left;
+            color: #FF6060;
+            list-style: none;
+        }
     }
 }
