--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -1,25 +1,51 @@
-
 header{
-    max-width: 100%;
+    width: 100%;
     margin: 3%;
     display: flex;
     justify-content: space-between;
     font: {
         size: 24px;
     }
+
+    .logo{
+        display: block;
+    }
+    
+    .logoMobile{
+        display: none;
+    }
+
+    nav {
+        ul {
+            display: flex;
+            list-style: none;
+        }
+        a {
+            text-decoration: none;
+            color: #FF6060;
+            padding: 5px 20px;
+        }
+        .active{
+            text-decoration: underline;
+        }
+    }
 }
 
-nav {
-    ul {
-        display: flex;
-        list-style: none;
+@media screen and (max-width: 768px) {
+
+header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 20px;
+    vertical-align: middle;
+    .logo{
+        display: none;
     }
-    a {
-        text-decoration: none;
-        color: #FF6060;
-        padding: 5px 20px;
+
+    .logoMobile{
+        display: block;
+        height: 46px;
     }
-    .active{
-        text-decoration: underline;
-    }
+}
 }
