--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,3 +12,26 @@ code {
     monospace;
 }
 
+#main {
+  margin: 0 5%;
+}
+
+@media screen and (max-width: 768px) {
+  #main{
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 455px) {
+
+  header{
+    nav{
+      font-size: 12px;
+    }
+  }
+  .banner-container{
+      .title{
+        font-size: 24px;
+      }
+  }
+}
