--- a/src/style/Card.scss
+++ b/src/style/Card.scss
@@ -7,6 +7,7 @@
     .card-collapse-container{
         display: flex;
         width: 100%;
+        gap: 30px;
     
         .collapse{
             width: 90%;
