--- a/src/style/Carousel.scss
+++ b/src/style/Carousel.scss
@@ -30,5 +30,15 @@
                 padding: 0;
             }
           }
+
+          .carousel-counter{
+            position: absolute;
+            bottom: 1%;
+            transform: translateY(-50%);
+            display: flex;
+            width: 100%;
+            justify-content: center;
+            color: white;
+          }
       }
 }
