--- a/src/style/Collapse.scss
+++ b/src/style/Collapse.scss
@@ -1,18 +1,41 @@
 .collapse{
     margin-bottom: 30px;
-    button{
-        width: 70%;
+
+    div{
+
+    div{
+        display: flex;
+        justify-content: space-between;
+        text-align: center;
+        padding: 5px;
+        align-items: center;
+        width: 97%;
         height: 52px;
         background-color: #FF6060;
         border: none;
         border-radius: 5px;
-        text-align: left;
         color: white;
         font-size: 24px;
+
+        img{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            text-align: right;
+            cursor: pointer;
+        }
     }
-    ul{        
-        margin: 0;
-        padding: 0;
+    ul{ position: relative;       
+        background-color: #F7F7F7;
+        border-radius: 10px;
+        padding: 30px 20px;
+        bottom: 15px;
+
+        &.slide-down {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease-in-out;
+        }
 
         li, p{
             font-size: 18px;
@@ -23,4 +46,5 @@
             list-style: none;
         }
     }
+}
 }
