--- a/FrontEnd/src/styles/Skills.scss
+++ b/FrontEnd/src/styles/Skills.scss
@@ -1,9 +1,12 @@
-.skills {
+@import 'Colors.scss';
+
+#Skills {
     display: flex;
     justify-content: center;
     margin-top: 30px;
-    width: 100%;
     gap: 15%;
+    background-color: $secondary-transparent-color;
+    padding: 50px;
 
     .skills-li {
         display: flex;
@@ -29,7 +32,7 @@
 
 @media screen and (max-width: 768px) {
 
-    .skills {
+    #Skills {
         gap: 10%;
         .skills-li {
             span {
@@ -44,7 +47,7 @@
 
 @media screen and (max-width: 425px) {
 
-    .skills {
+    #Skills {
         display: block;
 
         .skills-li {
