--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -26,8 +26,11 @@
             text-align: center;
         }
     }
+}
 
-    @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
+
+    #banner {            
         font-size: 19px;
         height: 150px;
         
@@ -40,9 +43,12 @@
             }
         }
     }
+}
     
-    @media screen and (max-width: 425px) {
-        
+@media screen and (max-width: 425px) {
+
+    #banner {
+        padding: 0;        
         font-size: 16px;
         height: 100px;
         
