--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -90,22 +90,25 @@ a:hover {
 @media screen and (max-width: 425px) {
 
     #Header {
-        position: inherit;
         width: 100%;
         justify-content: center;
+        
+        .header-container {
+            position: relative;
+            justify-content: center;
+            
+            .logo-git {
+                display: none;
+            }
     
-
-        .logo-git {
-            display: none;
-        }
-
-        nav {
-            ul {
-                li {
-                    a {
-                        padding: 5px;
-                        color: black;
-                        background-color: rgb(255, 255, 255);
+            nav {
+                ul {
+                    li {
+                        a {
+                            padding: 5px;
+                            color: black;
+                            background-color: rgb(255, 255, 255);
+                        }
                     }
                 }
             }
